ready for lecture 3!

--- a/prog2.ipynb
+++ b/prog2.ipynb
@@ -8,19 +8,28 @@
     "# PROGRAMMING TASKS\n",
     "\n",
     "## Data\n",
-    "For the assignment you are provided with a set of files named each containing unsigned 64-bit integers (note: not in text format). They can be found on moodle.\n",
     "\n",
-    "The `Ax`, `Bx` and `Cx` files contain unsigned 64-bit integers. The first integer is the number $n$, denoting the number of insertions and queries present in the files. The second integer $m$ (or $k$) denotes the permissible limit for integer size. \n",
+    "For the assignment you with files containing unsigned 64-bit integers (note: not in text format).\n",
     "\n",
-    "* `Ax` files are for task 1 and 2, and contain $n$ and $m$, followed by $n$ integers to add to a `BitArray`, followed by $n$ integers for membership / sum queries. (Similar to the ones in set 1 but without explicit switching between modes)\n",
-    "* `Bx` files are for tasks 3, and contain $n$ and $m$, followed by $n$ integers to add to a `BitArray`, followed by $n$ integers for location queries.\n",
-    "* `Cx` files are for task 4, and contain $n$ and $k$, followed by $n$ integers to add to a packed array, followed by $n$ integers for index queries.\n",
+    "Unfortunately there is no convenient way provided by UH to share ready made files, so you will have to use the `nums.py` program  (shared on moodle) to generate files.\n",
+    "\n",
+    "The `nums.py` script can generate three different kinds of files. For all of these, the first 2 integers behave the same. The first integer is the number $n$, denoting the number of insertions and queries present in the files. The second integer $m$ (or $k$) denotes the permissible limit for integer size. \n",
+    "\n",
+    "* Files created with the (default) `-a` flag are for tasks 1 and 2, and contain $n$ and $m$, followed by $n$ integers to add to a `BitArray`, followed by $n$ integers for membership/sum queries. (Similar to the ones in set 1 but without explicit switching between modes)\n",
+    "* Files created with the `-b` flag are for tasks 3, and contain $n$ and $m$, followed by $n$ integers to add to a `BitArray`, followed by $n$ integers for location queries.\n",
+    "* Files created with the `-c` flag are for task 4, and contain $n$ and $k$, followed by $n$ integers to add to a packed array, followed by $n$ integers for index queries.\n",
+    "\n",
+    "In addition, you can provide the `-s` flag to sort the data. (Does not sort the integers to append in `-c` is given, just the queries.)\n",
     "\n",
     "These files are similar to the inputs that CSES will use to test your solutions.\n",
     "\n",
     "Think of each file as containing a set of integers. The integers in the files are 64-bits (i.e. 8 bytes) in length, unsigned, and are not sorted in any particular way.\n",
     "\n",
-    "The 21 integers in `A0` are: $10, 10, 6, 7, 7, 6, 6, 1, 2, 5, 6, 1, 9, 5, 0, 8, 9, 8, 8, 0, 8, 1$"
+    "If you create a file with `python3 nums.py -n 10 -m 10 -r 1337 > data`, the 22 integers in `data` should be \n",
+    "\n",
+    "```\n",
+    "10, 10, 7, 9, 7, 2, 2, 4, 8, 9, 6, 6, 7, 8, 1, 6, 6, 2, 2, 9, 8, 1\n",
+    "```"
    ]
   },
   {
@@ -98,19 +107,19 @@
     "\n",
     "**Example:**\n",
     "\n",
-    "The call `./main -b A0` or `./main -b < A0` should output\n",
+    "The call `./main -b data` or `./main -b < data` should output\n",
     "\n",
     "```\n",
-    "0\n",
+    "1\n",
     "1\n",
     "0\n",
-    "0\n",
-    "0\n",
-    "0\n",
-    "0\n",
-    "0\n",
-    "0\n",
     "1\n",
+    "1\n",
+    "1\n",
+    "1\n",
+    "1\n",
+    "1\n",
+    "0\n",
     "```"
    ]
   },
@@ -121,7 +130,7 @@
    "source": [
     "## Task A21/B21: Supporting the `sum` Function for `BitArray`s \n",
     "\n",
-    "### 3 out of 10 marks\n",
+    "### 3 out of 10 marks for A21<br /> 4 out of 10 marks for B21\n",
     "\n",
     "Recall from the assignment overview above that for a bit array $B$, the function `sum(i)` returns a count of the number of $1$ bits in $B[0..i)$. I.e. $\\sum_{j=0}^{i - 1}B[j]$. The following is a possible and very simple (and slow (and unsafe!)) way to support sum:\n",
     "\n",
@@ -147,18 +156,18 @@
     "\n",
     "Your solution should work similar to the previous task. But should run `sum` queries instead when given the `-s` flag. For the purposes of the written task, try sorting sequences and running multiple times with different data. Then submit your solution to CSES.\n",
     "\n",
-    "For example `./main -s A0` or `./main -s < A0` should output\n",
+    "For example `./main -s data` or `./main -s < data` should output\n",
     "\n",
     "```\n",
-    "5\n",
+    "3\n",
+    "4\n",
+    "0\n",
+    "2\n",
     "2\n",
     "0\n",
-    "5\n",
-    "5\n",
-    "5\n",
-    "5\n",
     "0\n",
     "5\n",
+    "4\n",
     "0\n",
     "```"
    ]
@@ -170,7 +179,7 @@
    "source": [
     "## Task A22/B22: Supporting `location` queries \n",
     "\n",
-    "### 2 out of 10 marks for A22<br/> 4 out of 10 marks for B22\n",
+    "### 2 out of 10 marks for A22<br /> 6 out of 10 marks for B22\n",
     "\n",
     "We now want to effectively query the locations of the 1 bits in the bit array.\n",
     "\n",
@@ -178,25 +187,30 @@
     "\n",
     "Since `sum()` and `location()` are monotonic functions over the `BitArray`, and the values for `location()` can be calculated based on `sum()` queries, the results of `location()` can be calculated using binary search and `sum()`. This is fairly straightforward to implement and takes $\\mathcal{O}\\log(m)$ time but no extra space.\n",
     "\n",
-    "Very fiddly constant time operations that take at most $n + o(n)$ space exist, as do almost constant time solutions that are comparatively easy to implement, take at most $n + 63$ bits of extra space, and are very fast in practice.\n",
+    "Very fiddly constant time operations that take at most $n + o(n)$ bits of space exist, as do almost constant time solutions that are comparatively easy to implement, take at most $n + 63$ bits of extra space, and are very fast in practice.\n",
     "\n",
     "For full points for the A task, you only need to implement location using binary search and `sum`. For the B task you may need to to challenge yourself further.\n",
     "\n",
     "Your solution should work similarly to the previous task but should do `location` queries when the `-l` flag is given. For the purposes of the written task, think about how the constant time or near-constant time solution would look, and time your implementation with different kinds of data. Then submit your solution to CSES.\n",
     "\n",
-    "For example `./main -l B0` or `./main -l < B0` should output\n",
+    "\n",
+    "**For example:**\n",
+    "\n",
+    "Assuming `python3 nums.py -n 10 -m 10 -b -r 1337 > data`\n",
+    "\n",
+    "`./main -l data` or `./main -l < data` should output\n",
     "\n",
     "```\n",
-    "5\n",
     "7\n",
-    "7\n",
-    "1\n",
-    "8\n",
     "3\n",
-    "1\n",
-    "7\n",
-    "1\n",
+    "5\n",
+    "8\n",
     "10\n",
+    "7\n",
+    "7\n",
+    "5\n",
+    "3\n",
+    "8\n",
     "```"
    ]
   },
@@ -206,7 +220,7 @@
    "metadata": {},
    "source": [
     "\n",
-    "# Task 4: `PackedIntegerArray`s \n",
+    "# Task A23: `PackedIntegerArray`s \n",
     "\n",
     "## 3 out of 10 marks\n",
     "\n",
@@ -222,30 +236,30 @@
     "\n",
     "If the `-t` flag is given, the different steps of the execution should be timed, and timing information should be output to stderr.\n",
     "\n",
-    "Run and time your program with different kinds of input data. Do not sort the input data, but you may want to try sorting the query data.\n",
+    "Run and time your program with different kinds of input data.\n",
     "\n",
     "When you are happy with your program, submit to CSES.\n",
     "\n",
-    "For example `./main -i C0` or `./main -i < C0` should output\n",
+    "For example `./main -i data` or `./main -i < data` should output\n",
     "\n",
     "```\n",
-    "3\n",
-    "5\n",
-    "8\n",
     "9\n",
-    "1\n",
     "6\n",
-    "1\n",
+    "9\n",
     "8\n",
     "8\n",
-    "5\n",
+    "7\n",
+    "7\n",
+    "6\n",
+    "6\n",
+    "9\n",
     "```"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -259,7 +273,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
