--- a/wri2.ipynb
+++ b/wri2.ipynb
@@ -25,7 +25,7 @@
     "\n",
     "## Task 4\n",
     "\n",
-    "Look around on the web and find a way to measure the peak memory usage of each of your programs, and the sizes of the data structures used. Explain the method you used and where you found it online (if you found it there). Record the peak memory usage of your programs and data structures. Think about variation between programs and runs with different data, if any.\n",
+    "Look around on the web and find a way to measure the peak memory usage of each of your solutions, and the sizes of the data structures used. Explain the method you used and where you found it online (if you found it there). Record the peak memory usage of your programs and data structures. Think about variation between peak memory and data strukture size as well as between runs with different data, if any.\n",
     "\n",
     "## Task 5\n",
     "\n",
@@ -35,7 +35,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -49,7 +49,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
