all material done?

--- a/prog4.ipynb
+++ b/prog4.ipynb
@@ -9,9 +9,9 @@
     "\n",
     "## Data\n",
     "\n",
-    "We use the same data sets as last week.\n",
+    "Use the same `nums.py` script as last week.\n",
     "\n",
-    "We will focus on the `Fx` files, and stop ignoring the $n$ index queries in the files."
+    "We will now and stop ignoring index queries."
    ]
   },
   {
@@ -27,7 +27,9 @@
     "\n",
     "For input: $[2,7,500,1,0]$<br/>\n",
     "The program should output: $[3,500,7]$<br/>\n",
-    "I.e. again 3 blocks used and `VB.get(1)` $=500$, `VB.get(0)` $=7$. "
+    "I.e. again 3 blocks used and `VB.get(1)` $=500$, `VB.get(0)` $=7$.\n",
+    "\n",
+    "**Note:** The tests for this set will ignore the value of the block counter. So feel free to ignore any given $k$ value, and engineer your data structure as you feel is best. You need to remain approximately as space efficient as the basic VByte code tho."
    ]
   },
   {
@@ -35,21 +37,19 @@
    "id": "0806c7ef",
    "metadata": {},
    "source": [
-    "## Task 1: Naive random access to VB codes (2 out of 10 marks)\n",
+    "## Task A40: Naive random access to VB codes (3 out of 10 marks)\n",
     "\n",
     "Stop ignoring the index queries.\n",
     "\n",
-    "Implement `VB.scan()` for your generalised VB data structure. \n",
+    "Implement `VB.scan()` for your VByte data structure. \n",
     "\n",
     "The intention is to just scan from the start of the data structure and output the target integer when you get to it.\n",
     "\n",
     "Make note of the query performance for this random access implementation.\n",
     "\n",
-    "This is intended as a baseline for benchmarking tasks 2 and 3.\n",
+    "This is intended as a baseline for your benchmarking of tasks A41/B41 and B42.\n",
     "\n",
-    "Once you are satisfied with your implementation, submit it to CSES.\n",
-    "\n",
-    "NB: if you have trouble with the packed arrays, the A task should pass (possibly faster) if you ignore k and use entire bytes."
+    "Once you are satisfied with your implementation, submit it to CSES."
    ]
   },
   {
@@ -57,19 +57,20 @@
    "id": "0c6ab843",
    "metadata": {},
    "source": [
-    "## Task 2: Sum-Query-Based Random Access to VB codes (4 out of 10 marks)\n",
+    "## Task A41/B41: Sum-Query-Based Random Access to VB codes\n",
+    "\n",
+    "### A41 yields 7 / 10 marks<br />B41 yields 5 / 10 marks\n",
     "\n",
     "In this task you will make use of your `BitArray` class from Set 1 as well as the `sum` function to support access to integer sequences that have been compressed with VByte codes. This requires us to first slightly rearrange the bits of the VByte codes.\n",
     "\n",
-    "For a given integer sequence $S[0..n-1]$, of $n$ integers, let $m$ be the length (in parts) of the longest VByte code when $S$ is VByte encoded (ignoring what $k$ is for now). Also, let $N_p$ be the number of VByte codes consisting of $p$ or more parts.\n",
+    "For a given integer sequence $S[0..n-1]$, of $n$ integers, let $m$ be the length (in parts) of the longest VByte code when $S$ is VByte encoded. Also, let $N_p$ be the number of VByte codes consisting of $p$ or more parts.\n",
     "\n",
     "The data structure you will implement will consist of $m$ layers numbered $1,\\ldots, m$.\n",
-    "Layer $L_i$ will consist of a `BitArray`, $B_i$, and a Packed Integer Array, $A_i$, both of length $N_p$.\n",
+    "Layer $L_i$ will consist of a `BitArray`, $B_i$, and an array of $k$-bit blocks, $A_i$, both of length $N_p$.\n",
     "\n",
     "$B_0$ contains the stop bit of the 1<sup>st</sup> part of each code and $A_0$ contains the data bits of the 1<sup>st</sup> part of each code. Note that every code has a 1<sup>st</sup> part, so $\\lvert B_0\\rvert = N_0 = n$.\n",
     "\n",
-    "In general $B_i[j]$ contains the stop bit of the $i$<sup>th</sup> part for the $j$<sup>th</sup> code having $i$ or more parts, and $A_i[j]$ contains the corresponding data bits.\n",
-    "\n"
+    "In general $B_i[j]$ contains the stop bit of the $i$<sup>th</sup> part for the $j$<sup>th</sup> code having $i$ or more parts, and $A_i[j]$ contains the corresponding data bits."
    ]
   },
   {
@@ -116,9 +117,7 @@
    "source": [
     "Your task is to implement `vb.get()` (or `vb[]` if you want to get fancy) using the data structure sketched above and compare the performance of the sum-based access method to the scan function you implemented in Task 1.\n",
     "\n",
-    "Benchmark this implementation. Compare the query times to the ones for Task 1, and compare the space usage to the other implementations. What is the space overhead of this implementation in practice?\n",
-    "\n",
-    "NB: if you have trouble with the packed arrays, the A task should also pass if you ignore k and use entire bytes."
+    "Benchmark this implementation. Compare the query times to the ones for Task A40, and compare the space usage to the other implementations. What is the space overhead of this implementation in practice?"
    ]
   },
   {
@@ -126,7 +125,7 @@
    "id": "7d71ab91",
    "metadata": {},
    "source": [
-    "## Task 3: Location-Query-Based Random Access to VB codes (4 out of 10 marks)\n",
+    "## Task B42: Location-Query-Based Random Access to VB codes (5 out of 10 marks)\n",
     "\n",
     "The data structure for task 2 was fairly complicated and had loads of moving parts.\n",
     "\n",
@@ -147,7 +146,7 @@
     "\n",
     "Now to access index $1$ for example, the blocks containing the bits for index one are $[\\operatorname{location}(i) + 1 \\ldots \\operatorname{location}(i + 1)] = [1 \\ldots 2]$. Now the blocks can be read and reordered to retrieve the value.\n",
     "\n",
-    "Benchmark your implementation for random access using location queries in comparison to your solution to task 2. What is the difference in performance and space overhead? General thoughts on this approach in comparison to task 2?\n"
+    "Benchmark your implementation for random access using location queries in comparison to your solution to task A41/B41. What is the difference in performance and space overhead? General thoughts on this approach in comparison to task A41/B41?\n"
    ]
   }
  ],
