--- a/wri0.ipynb
+++ b/wri0.ipynb
@@ -13,7 +13,7 @@
     "\n",
     "## Task 1\n",
     "\n",
-    "What did you do and why for the programming task 1?\n",
+    "What did you do and why for the programming task A00?\n",
     "\n",
     "What did you find / What results did you get when running the code?\n",
     "\n",
