--- a/wri1.ipynb
+++ b/wri1.ipynb
@@ -12,7 +12,7 @@
     "Upload your answers as a single pdf to moodle. The length of your submission should not exceed 4 pages in total.\n",
     "\n",
     "## Task 1\n",
-    "What did you do and why for the A series programming tasks 1.1-1.2? What did you find / What results did you get? The answer should be brief and to the point, a total of ~1 page at most.\n",
+    "What did you do and why for the A series programming tasks A10,A11? What did you find / What results did you get? The answer should be brief and to the point, a total of ~1 page at most.\n",
     "\n",
     "## Task 2\n",
     "Think about the performance of the different data structures (the 3 provided ones and the 2 you possibly implemented).\n",
