--- a/wri3.ipynb
+++ b/wri3.ipynb
@@ -12,15 +12,22 @@
     "Upload your answers as a single pdf to Moodle. The length of your submission should not exceed 6 pages in total. Each task is worth 2 points for a total of 10 points. \n",
     "\n",
     "### Task 1-2\n",
-    "What did you do and why for the programming tasks 1-6? What did you find / What results did you get? The answers should be brief and to the point, absolutely no more than 2 pages.\n",
+    "What did you do and why for the programming tasks A30, A31? What did you find / What results did you get? The answers should be brief and to the point, absolutely no more than 2 pages.\n",
+    "\n",
+    "You can write about e.g.\n",
+    "* Performance in system time, user time, wall clock time for different test data sets\n",
+    "* Any performance impact of changing the input/output code\n",
+    "* What kind of changes to the code had what kind of performance impact\n",
+    "* Relevance of powers of 2\n",
+    "* Compression performance of different data.\n",
     "\n",
     "\n",
     "### Task 3\n",
-    "Strengths and weaknesses of sorted representations compared to unsorted? Can you think of use cases where each would be preferable? (related to programming tasks 1 and 2).\n",
+    "Strengths and weaknesses of sorted representations compared to unsorted? Can you think of use cases where each would be preferable? (related to programming tasks A30 and A31).\n",
     "\n",
     "\n",
     "### Task 4\n",
-    "Strengths and weaknesses of a generalised implementation with selectable block size compared to “standard” VByte code with 7-bit blocks and 1 stop bit.\n",
+    "Strengths and weaknesses of a generalised implementation with selectable block size A31 compared to “standard” VByte code with 7-bit blocks and 1 stop bit A30.\n",
     "\n",
     "\n",
     "### Task 5\n",
