--- a/wri4.ipynb
+++ b/wri4.ipynb
@@ -15,7 +15,7 @@
     "How is the performance (specifically read and write speed) of VByte code implementations (standard and generalised) architecture dependent? At least the talk by Timur Doumler linked in the course material contains relevant information.\n",
     "\n",
     "## Task 2\n",
-    "What is the asymptotic performance of the random access queries you implemented in tasks 1, 2 and 3?\n",
+    "What is the asymptotic performance of the random access queries A40, A41 and A42?\n",
     "\n",
     "## Task 3\n",
     "Does the practical performance agree with the asymptotic performance? Why? Why not?\n",
