--- a/wri2.ipynb
+++ b/wri2.ipynb
@@ -13,7 +13,7 @@
     "\n",
     "## Task 1\n",
     "\n",
-    "What did you do and why for the programming tasks 1-3? What did you find / What results did you get? The answer should be brief and to the point, a total of ~2 pages at most.\n",
+    "What did you do and why for the programming tasks A20-A23? What did you find / What results did you get? The answer should be brief and to the point, a total of ~2 pages at most.\n",
     "\n",
     "## Task 2\n",
     "\n",
@@ -21,7 +21,7 @@
     "\n",
     "## Task 3\n",
     "\n",
-    "What effect does sorting have on performance? Why?\n",
+    "What effect does using sorted input data have on performance? Why?\n",
     "\n",
     "## Task 4\n",
     "\n",
@@ -35,7 +35,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -49,7 +49,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
