--- a/prog4.ipynb
+++ b/prog4.ipynb
@@ -25,7 +25,7 @@
     "\n",
     "The program specification is the same as last week.\n",
     "\n",
-    "For input: $[2,7,500,1,0]$<br/>\n",
+    "For (binary) input: $[2,7,500,2,1,0]$<br/>\n",
     "The program should output: $[3,500,7]$<br/>\n",
     "I.e. again 3 blocks used and `VB.get(1)` $=500$, `VB.get(0)` $=7$.\n",
     "\n",
@@ -166,7 +166,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.10.10"
   }
  },
  "nbformat": 4,
