--- a/prog4.ipynb
+++ b/prog4.ipynb
@@ -29,7 +29,9 @@
     "The program should output: $[3,500,7]$<br/>\n",
     "I.e. again 3 blocks used and `VB.get(1)` $=500$, `VB.get(0)` $=7$.\n",
     "\n",
-    "**Note:** The tests for this set will ignore the value of the block counter. So feel free to ignore any given $k$ value, and engineer your data structure as you feel is best. You need to remain approximately as space efficient as the basic VByte code tho."
+    "**Note:** The tests for this set will ignore the value of the block counter. So feel free to ignore any given $k$ value, and engineer your data structure as you feel is best. You need to remain approximately as space efficient as the basic VByte code tho.\n",
+    "\n",
+    "In addition to the command line parameters in the last set, CSES will use `-n` and `-l` flags to indicate that the tests are for the **n**aive or **l**ocation based implementations respectively. This allows you to not change the code to submit to different tests, but these can safely be ignored if you just set the correct implementation as default when submitting."
    ]
   },
   {
@@ -48,6 +50,8 @@
     "Make note of the query performance for this random access implementation.\n",
     "\n",
     "This is intended as a baseline for your benchmarking of tasks A41/B41 and B42.\n",
+    "\n",
+    "CSES will call the program with the `-n` flag (for naive), to indicate that this iterative version should be used in case there are others available.\n",
     "\n",
     "Once you are satisfied with your implementation, submit it to CSES."
    ]
@@ -146,7 +150,9 @@
     "\n",
     "Now to access index $1$ for example, the blocks containing the bits for index one are $[\\operatorname{location}(i) + 1 \\ldots \\operatorname{location}(i + 1)] = [1 \\ldots 2]$. Now the blocks can be read and reordered to retrieve the value.\n",
     "\n",
-    "Benchmark your implementation for random access using location queries in comparison to your solution to task A41/B41. What is the difference in performance and space overhead? General thoughts on this approach in comparison to task A41/B41?\n"
+    "Benchmark your implementation for random access using location queries in comparison to your solution to task A41/B41. What is the difference in performance and space overhead? General thoughts on this approach in comparison to task A41/B41?\n",
+    "\n",
+    "The automated tests on CSES will call the binary with the `-l` flag (for location) to enable selecting the correct  implementation."
    ]
   }
  ],
